# offlineAI

./: .gitignore  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
.github/workflows/: android-ci.yml
app/: build.gradle.kts  google-services.json  proguard-rules.pro
app/src/androidTest/java/com/edgeai/tutorlite/: MainActivityTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  edgeai_llama.cpp
app/src/main/java/com/edgeai/tutorlite/: EdgeAiTutorApp.kt  MainActivity.kt
app/src/main/java/com/edgeai/tutorlite/data/local/: AnalyticsEventDao.kt  AnalyticsEventEntity.kt  EdgeAiDatabase.kt  StudySessionDao.kt  StudySessionEntity.kt
app/src/main/java/com/edgeai/tutorlite/data/repository/: AnalyticsRepository.kt  DataStoreSettingsRepository.kt  RoomAnalyticsRepository.kt  SettingsRepository.kt
app/src/main/java/com/edgeai/tutorlite/di/: AppModule.kt  DatabaseModule.kt  FirebaseModule.kt
app/src/main/java/com/edgeai/tutorlite/domain/model/: AiModels.kt
app/src/main/java/com/edgeai/tutorlite/worker/: ModelHealthWorker.kt  StreakReminderWorker.kt  WorkScheduler.kt
app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-hi/: strings.xml
app/src/main/res/values-ta/: strings.xml
app/src/test/java/com/edgeai/tutorlite/: InferenceServiceTest.kt
docs/: ARCHITECTURE.md  CHALLENGES_SOLUTIONS.md  PLAY_STORE_LISTING.md  PRIVACY_POLICY_SNIPPET.md  PRODUCT_BACKLOG.md
gradle/wrapper/: gradle-wrapper.properties
(+35 files in other folders)
